--- a/.github/workflows/master_wq3er2w3r4.yml
+++ b/.github/workflows/master_wq3er2w3r4.yml
@@ -22,6 +22,9 @@ jobs:
           dotnet-version: '6.0.x'
           include-prerelease: true
 
+      - name: Set working directory
+        run: cd src
+
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
