--- a/.github/workflows/master_wq3er2w3r4.yml
+++ b/.github/workflows/master_wq3er2w3r4.yml
@@ -9,6 +9,10 @@ on:
       - master
   workflow_dispatch:
 
+defaults:
+ run:
+  working-directory: ./src
+
 jobs:
   build:
     runs-on: windows-latest
@@ -21,9 +25,6 @@ jobs:
         with:
           dotnet-version: '6.0.x'
           include-prerelease: true
-
-      - name: Set working directory
-        run: cd src
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
